adding update flags api
